--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.10.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.7",
     "bootstrap": "^4.3.1",
     "gatsby": "^2.13.51",
     "gatsby-image": "^2.2.8",
@@ -23,6 +26,7 @@
     "react-bootstrap": "^1.0.0-beta.11",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-parallax": "^2.2.4",
     "react-scrollspy": "^3.4.0"
   },
   "devDependencies": {
