--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-bootstrap": "^1.0.0-beta.11",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-lottie": "^1.2.3",
     "react-parallax": "^2.2.4",
     "react-player": "^1.14.1",
     "react-scrollspy": "^3.4.0"
